# snow-fight

./: .gitignore  .gitmodules  Cargo.toml  PROTOCOL.md  README.md
client/: Cargo.toml  build_shaders.sh
client/src/: game.rs  main.rs  message.rs  oneshot.rs  options.rs  renderer.rs  systems.rs
client/src/game/: camera.rs  network.rs  render.rs  systems.rs
client/src/game/systems/: camera.rs  render.rs
client/src/renderer/: gbuffer.rs  models.rs  ssao.rs  texture.rs
client/src/shaders/: build.sh  composition.frag  composition.frag.spv  fullscreen.vert  fullscreen.vert.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  ssao.frag  ssao.frag.spv
logic/: Cargo.toml
logic/src/: collision.rs  components.rs  events.rs  lib.rs  resources.rs  snapshot.rs  systems.rs  tags.rs  templates.rs  tile_map.rs
logic/src/components/: player.rs  tile.rs
logic/src/systems/: acceleration.rs  attack.rs  collision.rs  movement.rs  tile_interaction.rs
protocol/: Cargo.toml
protocol/src/: action.rs  de.rs  error.rs  event.rs  leb128.rs  lib.rs  packers.rs  request.rs  response.rs  ser.rs  snapshot.rs
rabbit/: Cargo.toml
rabbit/src/: impls.rs  lib.rs  read.rs  write.rs
rabbit/src/impls/: vlq.rs
rabbit_derive/: Cargo.toml
rabbit_derive/src/: lib.rs  macros.rs
rabbit_derive/tests/: enum.rs  struct.rs
server/: Cargo.toml
server/src/: game.rs  main.rs  message.rs  options.rs
server/src/game/: world.rs
socket/: Cargo.toml
socket/src/: connection.rs  error.rs  lib.rs  packet.rs  receiver.rs  sender.rs  util.rs
wgpu_shader/: Cargo.toml
wgpu_shader/src/: lib.rs
wgpu_shader_macros/: Cargo.toml
wgpu_shader_macros/src/: lib.rs  macros.rs
