[package]
name = "client"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
anyhow = "1.0.26"
thiserror = "1.0.10"
log = "0.4.8"
env_logger = "0.7.1"
protocol = { path = "../protocol" }
serde_json = "1.0.47"
serde = "1.0.104"
futures = "0.3.4"
socket = { path = "../socket" }
wgpu = "0.4.0"
winit = "0.21.0"
zerocopy = "0.3.0"
cgmath = "0.17.0"
logic = { path = "../logic" }
image = "0.23.0"
wgpu_shader = { path = "../wgpu_shader" }
rand = "0.7.3"

[dependencies.tokio]
version = "0.2.11"
features = ["udp", "rt-threaded", "sync", "macros"]
