[package]
name = "logic"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.2.1"
cgmath = "0.17.0"
rand = "0.7.3"
derive_more = "0.99.3"
bitflags = "1.2.1"
protocol = { path = "../protocol" }
log = "0.4.8"
