[package]
name = "protocol"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
