[package]
name = "protocol"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"
thiserror = "1.0.15"
bitflags = "1.2.1"
cgmath = "0.17.0"

[dependencies.rabbit]
path = "../rabbit"
features = ["derive"]

