[package]
name = "rabbit"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
description = "A compact bitpacked (de)serializer encoding"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["rabbit_derive"]

[dependencies]

[dependencies.thiserror]
version = "1.0.11"

[dependencies.rabbit_derive]
path = "../rabbit_derive"
optional = true
