[package]
name = "server"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
anyhow = "1.0.26"
thiserror = "1.0.10"
log = "0.4.8"
env_logger = "0.7.1"
protocol = { path = "../protocol" }
serde = "1.0.104"
serde_json = "1.0.47"
futures = "0.3.4"
socket = { path = "../socket" }
logic = { path = "../logic" }

[dependencies.tokio]
version = "0.2"
features = ["udp", "macros", "rt-threaded", "sync", "time", "rt-util"]

