[package]
name = "socket"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
thiserror = "1.0.11"
futures = "0.3.4"
log = "0.4.8"
rand = "0.7.3"

[dependencies.tokio]
version = "0.2"
features = ["udp", "sync", "rt-core", "macros", "time", "stream"]

