[package]
name = "wgpu_shader"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"

[dependencies.wgpu_shader_macros]
path = "../wgpu_shader_macros"
