[package]
name = "wgpu_shader_macros"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.16"
quote = "1.0.3"
proc-macro2 = "1.0.9"

